# droidforge

./: .gitattributes  README.md  V11_10_NATIVE_STARTUP_DIAGNOSTICS.md  V11_11_FINAL_TWO_TEST_DECISION.md  V11_2_DOWNLOADER_FOUNDATION.md  V11_3_COMPLETE_FOUNDATION.md  V11_4_JDK_JLI_LAUNCHER.md  V11_5_IN_PROCESS_JVM_FOUNDATION.md  V11_6_ISOLATED_JVM_CRASH_GUARD.md  V11_9_EXTRACTION_DIAGNOSTICS.md  V11_EMBEDDED_RUNTIME_FOUNDATION.md  V12_0_EXECUTION_FOUNDATION.md  V12_1_GRADLE_JAVA_HOME_SHIM_FIX.md  V6_CHANGES.md  V7_ANDROID_ONLY_FOUNDATION.md  V8_CHANGES.md  V9_STATUS.md  jdk17_release_metadata.json  jdk17_verified_metadata.json  pubspec.yaml  test_templates.dart
.github/workflows/: build_android_jdk17.yml  flutter_ci.yml
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  droidforge_runtime.cpp
droidforge/: AndroidManifest.xml  README.md  SDK_MANAGER_NOTES.md
droidforge/.github/workflows/: flutter_ci.yml
droidforge/android/app/: build.gradle.kts
droidforge/ios/Runner/: Info.plist
droidforge/lib/: main.dart
droidforge/linux/: CMakeLists.txt
droidforge/linux/runner/: my_application.cc
droidforge/web/: index.html  manifest.json
droidforge/windows/: CMakeLists.txt
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: runtime_archive_installer.dart
native/aapt2_shim/: droidforge_aapt2_shim.c
native/java_shim/: droidforge_java_shim.c
native/pointer_tag/: droidforge_disable_tags.c
native/runtime_test/: droidforge_exec.c
test/: widget_test.dart
windows/runner/: Runner.rc  main.cpp
(+73 files in other folders)
